fix menu logo width on mobile

--- a/styles/components/menu/menu__/menu__logo.css
+++ b/styles/components/menu/menu__/menu__logo.css
@@ -3,3 +3,9 @@
   height: 30.24px;
   fill: black;
 }
+
+@media screen and (max-width: 1023px) {
+  .menu__logo {
+    width: 133px;
+  }
+}
